0.9.1/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py:


Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)
=================================================================================
Various examples of processing NMR spectra

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 19-21

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 24-27

Importing a 2D NMR spectra
--------------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 27-35

.. code-block:: default

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata"

    dataset = scp.nmr.read_topspin(
        nmrdir / "bruker" / "tests" / "nmr" / "topspin_2d" / "1" / "pdata" / "1" / "2rr"
    )









.. GENERATED FROM PYTHON SOURCE LINES 36-39

Analysing the 2D NMD dataset
----------------------------
Print dataset summary

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: default

    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [quaternion] pp (shape: (y:1024, x:2048))[topspin_2d expno:1 procno:1 (2D)]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> topspin_2d expno:1 procno:1 (2D)</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@runnervm3jyl0</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2026-06-01 11:56:58+00:00</div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> intensity</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[  quaternion(0.100061141304348, -0.109238068953804, 0.0912962805706522, -0.06388916015625)<br/>             quaternion(0.118825365149457, -0.0795101265285326, 0.0679287321671196, -0.0712268597146739) ...<br/>             quaternion(0.00927617612092391, 0.126897397248641, -0.101181322180707, 0.0958802861752717)<br/>             quaternion(-0.0308309273097826, 0.111744968580163, -0.117966414741848, 0.0953909434442935)]<br/>          [  quaternion(0.0857443104619565, -0.128736731487772, 0.0880388077445652, -0.0754811693274457)<br/>             quaternion(0.109431789232337, -0.106811417289402, 0.0621891983695652, -0.0777918011209239) ...<br/>             quaternion(0.0279885996942935, 0.11936427904212, -0.094482421875, 0.107491932744565)<br/>             quaternion(-0.0142467730978261, 0.115452933933424, -0.110846849524457, 0.111412831182065)]<br/>          ...<br/>          [  quaternion(0.113425823709239, -0.0694805112092391, 0.0955526069972826, -0.0404379670516304)<br/>             quaternion(0.116061162533967, -0.0304891304347826, 0.0806484587296196, -0.0534076723845109) ...<br/>             quaternion(-0.0343813688858696, 0.129237219769022, -0.111633406929348, 0.0731985606317935)<br/>             quaternion(-0.0600556216032609, 0.0969878354279891, -0.125906398607337, 0.0636558466372283)]<br/>          [  quaternion(0.109066533627717, -0.0890461531929348, 0.0938623046875, -0.0524230426290761)<br/>             quaternion(0.120559506623641, -0.0533887780230978, 0.0743359375, -0.0634351647418478) ...<br/>             quaternion(-0.0118260657269022, 0.130505795686141, -0.106812903362772, 0.0846292246942935)<br/>             quaternion(-0.0461604110054348, 0.105501019021739, -0.122931704313859, 0.0795456861413043)]] pp</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:1024, x:2048)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 2048</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> $\delta\ ^{27}Al$</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   96.79     96.7 ...   -102.8   -102.9] ppm</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 1024</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> $\delta\ ^{31}P$</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   38.79     38.7 ...   -44.52    -44.6] ppm</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plot the dataset

.. GENERATED FROM PYTHON SOURCE LINES 43-44

.. code-block:: default

    dataset.plot_map()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_001.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='$\\delta\\ ^{31}P$ $\\mathrm{/\\ \\mathrm{ppm}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 45-46

Extract slices along x

.. GENERATED FROM PYTHON SOURCE LINES 46-48

.. code-block:: default

    s = dataset[-27.6, :]
    s.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_002.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 49-51

Baseline correction of this slice
Note that only the real part is corrected

.. GENERATED FROM PYTHON SOURCE LINES 51-53

.. code-block:: default

    sa = s.snip(snip_width=100)
    sa.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_003.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 54-55

apply this correction to the whole dataset

.. GENERATED FROM PYTHON SOURCE LINES 55-57

.. code-block:: default

    sb = dataset.snip(snip_width=100)
    sb.plot_map()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_004.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='$\\delta\\ ^{31}P$ $\\mathrm{/\\ \\mathrm{ppm}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 58-59

Select a region of interest

.. GENERATED FROM PYTHON SOURCE LINES 59-63

.. code-block:: default

    sc = sb[
        -40.0:-15.0, 55.0:20.0
    ]  # note the use of float to make selection using coordinates (not point indexes)
    sc.plot_map()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_005.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='$\\delta\\ ^{31}P$ $\\mathrm{/\\ \\mathrm{ppm}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 64-65

Extract slices along x

.. GENERATED FROM PYTHON SOURCE LINES 65-67

.. code-block:: default

    s1 = sc[-27.6, :]
    s1.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_006.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 68-70

.. code-block:: default

    s2 = sc[-25.7, :]
    s2.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_007.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 71-72

plot two slices on the same figure

.. GENERATED FROM PYTHON SOURCE LINES 72-78

.. code-block:: default

    s1.plot()
    s2.plot(
        clear=False,
        color="red",
        linestyle="-",
    )



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_008.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_008.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{27}Al$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 79-80

Now slice along y

.. GENERATED FROM PYTHON SOURCE LINES 80-83

.. code-block:: default

    s3 = sc[:, 40.0]
    s4 = sc[:, 36.0]








.. GENERATED FROM PYTHON SOURCE LINES 84-90

IMPORTANT: note that when the slice is along y, this results in a column vector of
shape (308, 1). When an NDDataset method is applied to this slice, such as a baseline
correction, it will be applied by default to the last dimension [rows] (in this case
the dimension of size 1, which is not what is generally expected). To avoid this,
we can use the squeeze method to remove this dimension or transpose the slice to
obtain a vector of rows of shape (1, 308)

.. GENERATED FROM PYTHON SOURCE LINES 90-93

.. code-block:: default

    s3 = s3.squeeze()
    s4 = s4.squeeze()








.. GENERATED FROM PYTHON SOURCE LINES 94-95

plot the two slices on the same figure

.. GENERATED FROM PYTHON SOURCE LINES 95-97

.. code-block:: default

    s3.plot(color="violet", ls="-", lw="2")
    s4.plot(clear=False, color="green", ls="-", lw="2")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_009.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_009.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{31}P$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 98-100

Peak picking
------------

.. GENERATED FROM PYTHON SOURCE LINES 100-103

.. code-block:: default

    peaks, _ = s2.find_peaks()









.. GENERATED FROM PYTHON SOURCE LINES 104-106

plot the position of the peaks
For this we will define a plot function that we be reused later

.. GENERATED FROM PYTHON SOURCE LINES 106-132

.. code-block:: default



    def plot_with_pp(s, peaks):
        ax = s.plot()  # output the spectrum on ax. ax will receive next plot too;
        pks = peaks + 0.2  # add a small offset on the y position of the markers
        pks.plot_scatter(
            ax=ax,
            marker="v",
            color="black",
            clear=False,  # we need to keep the previous output on ax
            data_only=True,  # we don't need to redraw all things like labels, etc...
            ylim=(-0.1, 7),
        )
        for p in pks:
            x, y = p.coord(-1).values.m, (p + 0.2).values.m
            ax.annotate(
                f"{x:0.1f}",
                xy=(x, y),
                xytext=(-5, 5),
                rotation=90,
                textcoords="offset points",
            )


    plot_with_pp(s2, peaks)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_010.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_010.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 133-134

Set some parameters to get less but significant peaks

.. GENERATED FROM PYTHON SOURCE LINES 134-137

.. code-block:: default

    peaks, _ = s2.find_peaks(height=1.0, distance=1.0)
    plot_with_pp(s2, peaks)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_011.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_011.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 138-139

Now look in the other dimension using slice s4

.. GENERATED FROM PYTHON SOURCE LINES 139-142

.. code-block:: default

    peaks, _ = s4.find_peaks(height=1.0, distance=1.0)
    plot_with_pp(s4, peaks)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_012.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_012.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 143-147

Peak fitting
------------

Fit parameters are defined in a script (a single text as below)

.. GENERATED FROM PYTHON SOURCE LINES 147-202

.. code-block:: default

    script = """
    #-----------------------------------------------------------
    # syntax for parameters definition:
    # name: value, low_bound,  high_bound
    # available prefix:
    #  # for comments
    #  * for fixed parameters
    #  $ for variable parameters
    #  > for reference to a parameter in the COMMON block
    #    (> is forbidden in the COMMON block)
    # common block parameters should not have a _ in their names
    #-----------------------------------------------------------
    #

    COMMON:
    $ commonwidth: 1, 0, 5
    $ commonratio: .5, 0, 1

    MODEL: LINE_1
    shape: voigtmodel
        $ ampl:  1, 0.0, none
        $ pos:   -21.7, -22., -20
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_2
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -24, -24.5, -23.5
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_3
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -25.4, -25.8, -25
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_4
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -27.8, -28.5, -27
        > ratio: commonratio
        > width: commonwidth

    MODEL: LINE_5
    shape: voigtmodel
        $ ampl:  4, 0.0, none
        $ pos:   -31.5, -32, -31
        > ratio: commonratio
        > width: commonwidth

    """








.. GENERATED FROM PYTHON SOURCE LINES 203-204

We will work here on the slice s4 (taken in the y dimension).

.. GENERATED FROM PYTHON SOURCE LINES 204-206

.. code-block:: default

    s4p = s4.snip()  # Baseline correction








.. GENERATED FROM PYTHON SOURCE LINES 207-208

create an Optimize object

.. GENERATED FROM PYTHON SOURCE LINES 208-210

.. code-block:: default

    f1 = scp.Optimize(log_level="INFO")








.. GENERATED FROM PYTHON SOURCE LINES 211-212

Set parameters

.. GENERATED FROM PYTHON SOURCE LINES 212-216

.. code-block:: default

    f1.script = script
    f1.max_iter = 5000









.. GENERATED FROM PYTHON SOURCE LINES 217-218

Fit the slice s4p

.. GENERATED FROM PYTHON SOURCE LINES 218-220

.. code-block:: default

    f1.fit(s4p)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

             **************************************************
     Result:
     **************************************************

     COMMON:
            $ commonwidth:     1.8757, 0, 5
            $ commonratio:     0.7139, 0, 1

     MODEL: line_1
     shape: voigtmodel
            $ ampl:     0.4913, 0.0, none
            $ pos:   -21.0847, -22.0, -20
            > ratio:commonratio
            > width:commonwidth

     MODEL: line_2
     shape: voigtmodel
            $ ampl:     3.1380, 0.0, none
            $ pos:   -23.7153, -24.5, -23.5
            > ratio:commonratio
            > width:commonwidth

     MODEL: line_3
     shape: voigtmodel
            $ ampl:     4.2827, 0.0, none
            $ pos:   -25.3868, -25.8, -25
            > ratio:commonratio
            > width:commonwidth

     MODEL: line_4
     shape: voigtmodel
            $ ampl:     4.1165, 0.0, none
            $ pos:   -27.7584, -28.5, -27
            > ratio:commonratio
            > width:commonwidth

     MODEL: line_5
     shape: voigtmodel
            $ ampl:     2.3106, 0.0, none
            $ pos:   -31.5949, -32, -31
            > ratio:commonratio
            > width:commonwidth


    <spectrochempy.analysis.curvefitting.optimize.Optimize object at 0x7fa6cb807650>



.. GENERATED FROM PYTHON SOURCE LINES 221-222

Show the result

.. GENERATED FROM PYTHON SOURCE LINES 222-230

.. code-block:: default

    s4p.plot()
    ax = (f1.components[:]).plot(clear=False)
    ax.autoscale(enable=True, axis="y")

    # Plotmerit
    som = f1.inverse_transform()
    f1.plotmerit(offset=2)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_013.png
         :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
         :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_013.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_014.png
         :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr
         :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_014.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{31}P$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 231-233

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 233-235

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  10.655 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr.ipynb>`
